# docker-llm-production-example

./: intro.sh  llama_classification.ipynb  llama_classification_finetune.py  pyproject.toml  training.py
