[tool.poetry]
name = "docker-llm-demo"
version = "0.1.0"
description = ""
authors = ["Camilla <camilla.hemmer@scailex.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
testcontainers = "^4.7.2"
torch = "^2.4.0"
langchain-community = "^0.2.10"
notebook = "^7.2.1"
transformers = {extras = ["torch"], version = "^4.43.3"}
scikit-learn = "^1.5.1"
datasets = "^2.20.0"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
accelerate = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
